--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-comuni-italiani",
   "version": "0.1.0",
-  "description": "Node.js server based on the Express framework and on the MySQL database that returns the list of Italian regions, provinces and municipalities",
+  "description": "Node.js server based on the Express framework and on the MySQL database that returns the list of Italian regions, provinces and cities",
   "main": "app.js",
   "scripts": {
     "start": "npm run dev",
@@ -39,6 +39,8 @@
   "dependencies": {
     "@prisma/client": "^3.1.1",
     "async-middleware": "^1.2.1",
+    "axios": "^0.24.0",
+    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -49,6 +51,7 @@
     "morgan": "^1.10.0",
     "openid-client": "^4.9.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
+    "winston-daily-rotate-file": "^4.5.5",
+    "xlsx": "^0.17.3"
   }
 }
