added cron job to scan Istat permalink

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ APP_ENV=development
 APP_PORT=8000
 APP_TIMEZONE=Europe/Rome
 
+# Set how many months you want to scan on the ISTAT site, started every first day of month at 10:00
+ISTAT_SCAN_MONTHLY_PERIOD=3
+
 # Database config
 DB_HOST=localhost
 DB_PORT=3306
