--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/AntoninoBonanno/api-comuni-italiani#readme",
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.1.7",
     "@types/express-session": "^1.17.4",
@@ -41,6 +42,7 @@
     "async-middleware": "^1.2.1",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
