updated dockerfile, updated istat-scraper

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,7 @@
 ## 1. Create temp docker image to build the app
 FROM node:15-alpine AS builder
 WORKDIR /usr/app
-COPY ./package.json ./
-COPY ./tsconfig.json ./
-COPY ./prisma/schema.prisma ./prisma/schema.prisma
-COPY ./src ./src
+COPY .. .
 
 RUN npm install
 RUN npm run build
@@ -13,13 +10,16 @@ RUN npm run build
 FROM node:15-alpine
 WORKDIR /usr/app
 
-COPY --from=builder /usr/app/package.json ./
+COPY --from=builder /usr/app/package.json .
 COPY --from=builder /usr/app/dist .
 COPY --from=builder /usr/app/prisma ./prisma
+COPY --from=builder /usr/app/docker/scripts ./scripts
+
+RUN chmod -R +x ./scripts/
+RUN apk add --no-cache --upgrade bash # Add bash to run scripts
 
 RUN npm install --only=production # Install only production dependencies
 RUN npm install pm2 -g # Process manager
-RUN npx prisma generate
 
 EXPOSE 8000
-CMD ["pm2-runtime","app.js"]
+CMD ["bash", "./scripts/start.sh"]
