--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,9 @@
-**/.classpath
-**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
-**/.idea
-**/*.*proj.user
-**/*.dbmdl
-**/*.jfm
-**/charts
-**/docker-compose*
-**/Dockerfile*
-**/node_modules
-**/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
-README.md
+# Ignore everything
+**
+
+# Allow files and directories
+!/docker/scripts
+!/prisma
+!/src/**
+!/package.json
+!/tsconfig.json
