--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "ts-node-dev --respawn ./src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate && tsc -p ."
+    "build": "npx prisma generate && tsc -p .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
