--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # .env
 APP_NAME="API Comuni Italiani"
+# APP_ENV = development | production
 APP_ENV=development
 APP_PORT=8000
 
@@ -7,9 +8,5 @@ APP_PORT=8000
 ISTAT_SCAN_MONTHLY_PERIOD=5
 
 # Database config
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=comuni-italiani
-DB_USERNAME=root
-DB_PASSWORD=
-DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}
+#DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}
+DATABASE_URL=mysql://root:@localhost:3306/comuni-italiani
