--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -2,19 +2,29 @@ name: CI to Docker Hub
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - 'master'
     tags:
-      - "v*.*.*"
+      - 'v*'
+  pull_request:
+    branches:
+      - 'master'
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Check Out Repo 
       uses: actions/checkout@v2
                   
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v3
+      with:
+        images: ${{ secrets.DOCKER_HUB_USERNAME }}/api-comuni-italiani
+        
     - name: Login to Docker Hub
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
@@ -30,8 +40,9 @@ jobs:
       with:
         context: ./
         file: ./docker/Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api-comuni-italiani:latest
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
         
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
