--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-comuni-italiani",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Node.js server based on the Express framework and on the MySQL database that returns the list of Italian regions, provinces and cities",
   "main": "app.js",
   "scripts": {
@@ -25,34 +25,33 @@
   "homepage": "https://github.com/AntoninoBonanno/api-comuni-italiani#readme",
   "devDependencies": {
     "@types/cors": "^2.8.12",
-    "@types/cron": "^1.7.3",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.1.7",
     "@types/express-session": "^1.17.4",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@types/node": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "prisma": "^3.8.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   },
   "dependencies": {
-    "@prisma/client": "^3.8.1",
+    "@prisma/client": "^3.9.2",
     "async-middleware": "^1.2.1",
-    "axios": "^0.24.0",
+    "axios": "^0.26.0",
     "cors": "^2.8.5",
-    "cron": "^1.8.2",
-    "dotenv": "^10.0.0",
+    "croner": "^4.1.95",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
-    "helmet": "^4.6.0",
+    "helmet": "^5.0.2",
     "http-status-codes": "^2.1.4",
     "morgan": "^1.10.0",
-    "openid-client": "^4.9.0",
+    "openid-client": "^5.1.3",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5",
-    "xlsx": "^0.17.3"
+    "xlsx": "^0.18.2"
   }
 }
